added endpoint to check processes' status

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -44,5 +44,9 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
+    location /processes/ {
+        include proxy_params;
+        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+    }
 }
 
