changed nginx config to make locations more clear

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -26,13 +26,13 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
-    location ~* \/tiles\/[5-9]\/\d+\/\d+\.pbf {
+    location ~* \/tiles\/\d{1}\/\d+\/\d+\.pbf {
         proxy_cache my_zone;
         add_header X-Proxy-Cache $upstream_cache_status;
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
-    location ~* \/tiles\/\d+\/\d+\/\d+\.pbf {
+    location ~* \/tiles\/\d{2}\/\d+\/\d+\.pbf {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
