--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -28,6 +28,7 @@ server {
     }
     location ~* \/tiles\/\d{1}\/\d+\/\d+\.pbf {
         proxy_cache my_zone;
+        proxy_buffering on;
         add_header X-Proxy-Cache $upstream_cache_status;
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
