--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -10,6 +10,9 @@ server {
         add_header 'Access-Control-Allow-Headers' 'User-Agent,Keep-Alive,Content-Type';
         index index.html;
     }
+    location /dane/ {
+        root /var/www/data;
+    }
     location @app {
         include uwsgi_params;
         uwsgi_pass unix:/run/gugik2osm/osmhelper.sock;
