fixed regex in nginx.conf, when using brackets one needs apostrophes

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -29,14 +29,14 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
-    location ~* \/tiles\/\d{1}\/\d+\/\d+\.pbf {
+    location ~* "\/tiles\/\d{1}\/\d+\/\d+\.pbf" {
         proxy_cache my_zone;
         proxy_buffering on;
         add_header X-Proxy-Cache $upstream_cache_status;
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
-    location ~* \/tiles\/\d{2}\/\d+\/\d+\.pbf {
+    location ~* "\/tiles\/\d{2}\/\d+\/\d+\.pbf" {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
