fixed nginx.conf location for served address data

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,7 +11,8 @@ server {
         index index.html;
     }
     location /dane/ {
-        root /var/www/data;
+        autoindex on;
+        alias /var/www/data;
     }
     location @app {
         include uwsgi_params;
