fixed nginx.conf location for served address data... again

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -12,7 +12,7 @@ server {
     }
     location /dane/ {
         autoindex on;
-        alias /var/www/data;
+        alias /var/www/data/;
     }
     location @app {
         include uwsgi_params;
