added additional configuration for serving large static files

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,6 +11,7 @@ server {
         index index.html;
     }
     location /dane/ {
+        proxy_max_temp_file_size 0;
         autoindex on;
         alias /var/www/data/;
     }
