--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,6 +13,8 @@ server {
     location /dane/ {
         proxy_max_temp_file_size 0;
         autoindex on;
+        autoindex_exact_size off;
+	    autoindex_localtime on;
         alias /var/www/data/;
     }
     location @app {
