added new endpoint to nginx configuration

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -25,6 +25,10 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
+        location /josm_data {
+        include proxy_params;
+        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+    }
     location /lod1/not_in/osm/info.json {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
