--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,6 +2,12 @@ proxy_cache_path /tmp/nginx levels=1:2 keys_zone=my_zone:10m inactive=180m;
 
 server {
     listen 80;
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 10000;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml text/csv text/x-csv application/json;
+    gzip_disable "MSIE [1-6]\.";
     location / {
         root /var/www/html;
         add_header 'Access-Control-Allow-Origin' '*';
