--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -54,7 +54,7 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
-    location ~* \/prg\/.+ {
+    location ~* "\/delta\/.+" {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
