--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -16,7 +16,7 @@ server {
         add_header 'Access-Control-Allow-Headers' 'User-Agent,Keep-Alive,Content-Type';
         index index.html;
     }
-    location /dane/ {
+    location ~* "\/dane\/?" {
         proxy_max_temp_file_size 0;
         autoindex on;
         autoindex_exact_size off;
