#20 - added functionality allowing users to report objects as not valid for import into OSM which will filter them from showing in the map and exported files

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -31,7 +31,7 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
-        location /josm_data {
+    location /josm_data {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
@@ -66,5 +66,8 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
+    location /exclude/ {
+        include proxy_params;
+        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+    }
 }
-
