fixed some issues with ortophotomap by adding a proxy and changing some javascript behaviours

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -70,4 +70,16 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
+    location /orto {
+        add_header 'Access-Control-Allow-Origin' '*';
+
+        proxy_pass_header  Set-Cookie;
+        proxy_set_header X-Forwarded-Proto  $scheme;
+        proxy_set_header X-real-ip $remote_addr;
+        proxy_set_header X-forward-for $proxy_add_x_forwarded_for;
+
+        proxy_redirect off;
+
+        proxy_pass https://mapy.geoportal.gov.pl/wss/service/img/guest/ORTO/MapServer/WMSServer;
+    }
 }
