--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,31 @@
+appdirs==1.4.3
+attrs==19.3.0
+cached-property==1.5.1
+certifi==2019.11.28
+cffi==1.14.1
+chardet==3.0.4
 Click==7.0
-Flask==1.1.1
-gevent==1.4.0
-greenlet==0.4.15
+defusedxml==0.6.0
+Flask==1.1.2
+gevent==20.6.2
+greenlet==0.4.16
 gunicorn==20.0.4
+idna==2.6
+isodate==0.6.0
 itsdangerous==1.1.0
-Jinja2==2.10.3
-lxml==4.4.2
+Jinja2==2.11.2
+lxml==4.5.2
 MarkupSafe==1.1.1
-mercantile==1.1.2
-psycopg2-binary==2.8.4
-pyproj==2.4.2.post1
+mercantile==1.1.5
+psycopg2-binary==2.8.5
+pycparser==2.20
+pyproj==2.6.1.post1
+pytz==2019.3
+requests==2.24.0
+requests-toolbelt==0.9.1
+six==1.13.0
+urllib3==1.22
 Werkzeug==0.16.0
 zeep==3.4.0
-requests==2.20.0
+zope.event==4.4
+zope.interface==5.1.0
