--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==8.0.0
 appdirs==1.4.3
 attrs==19.3.0
 cached-property==1.5.1
@@ -7,6 +8,7 @@ chardet==3.0.4
 Click==7.0
 defusedxml==0.6.0
 Flask==1.1.2
+Flask-RESTful==0.3.8
 gevent==20.6.2
 greenlet==0.4.16
 gunicorn==20.0.4
