#2 - added functionality registering some of package exports (exports using bbox) and a layer presenting latest updates to OSM as well as locations of last exports

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -82,4 +82,9 @@ server {
 
         proxy_pass https://mapy.geoportal.gov.pl/wss/service/img/guest/ORTO/MapServer/WMSServer;
     }
+    location /updates.geojson {
+        add_header 'Access-Control-Allow-Origin' '*';
+        include proxy_params;
+        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+    }
 }
