added overpass layers - first stage of deployment

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -23,6 +23,10 @@ server {
 	    autoindex_localtime on;
         alias /var/www/data/;
     }
+    location /overpass-layers/ {
+        add_header 'Access-Control-Allow-Origin' '*';
+        alias /var/www/overpass-layers/;
+    }
     location @app {
         include uwsgi_params;
         uwsgi_pass unix:/run/gugik2osm/osmhelper.sock;
