--- a/requirements.txt
+++ b/requirements.txt
@@ -19,12 +19,14 @@ Jinja2==2.11.2
 lxml==4.6.2
 MarkupSafe==1.1.1
 mercantile==1.1.5
+osm2geojson==0.1.28
 psycopg2-binary==2.8.5
 pycparser==2.20
 pyproj==2.6.1.post1
 pytz==2019.3
 requests==2.24.0
 requests-toolbelt==0.9.1
+Shapely==1.7.1
 six==1.13.0
 urllib3==1.24.2
 Werkzeug==0.16.0
