--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -74,6 +74,10 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
+    location /layers/ {
+        include proxy_params;
+        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+    }
     location /orto {
         add_header 'Access-Control-Allow-Origin' '*';
 
