#42 - changed unix socket file location so gunicorn can start on its own after server restart

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -29,54 +29,54 @@ server {
     }
     location @app {
         include uwsgi_params;
-        uwsgi_pass unix:/run/gugik2osm/osmhelper.sock;
+        uwsgi_pass unix:/run/osmhelper.sock;
     }
     location /prg/not_in/osm/ {
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location /josm_data {
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location /lod1/not_in/osm/info.json {
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location /lod1/not_in/osm/ {
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location ~* "\/tiles\/\d{1}\/\d+\/\d+\.pbf" {
         proxy_cache my_zone;
         proxy_buffering on;
         add_header X-Proxy-Cache $upstream_cache_status;
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location ~* "\/tiles\/\d{2}\/\d+\/\d+\.pbf" {
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location ~* "\/delta\/.+" {
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location /random/ {
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location /processes/ {
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location /exclude/ {
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location /layers/ {
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
     location /orto {
         add_header 'Access-Control-Allow-Origin' '*';
@@ -93,6 +93,6 @@ server {
     location /updates.geojson {
         add_header 'Access-Control-Allow-Origin' '*';
         include proxy_params;
-        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+        proxy_pass http://unix:/run/osmhelper.sock;
     }
 }
