--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -6,7 +6,7 @@ server {
     gzip_vary on;
     gzip_min_length 10000;
     gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml text/csv text/x-csv application/json;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml text/csv text/x-csv application/json application/geo+json;
     gzip_disable "MSIE [1-6]\.";
     location / {
         root /var/www/html;
@@ -36,6 +36,10 @@ server {
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
     location /josm_data {
+        include proxy_params;
+        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+    }
+    location ~* "\/sc\/.+" {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
