--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,4 +1,5 @@
-proxy_cache_path /tmp/nginx levels=1:2 keys_zone=my_zone:10m inactive=180m;
+proxy_cache_path /tmp/nginx levels=1:2 keys_zone=low_zoom_mvt:10m inactive=10m max_size=100m use_temp_path=off;
+proxy_cache_path /tmp/nginx keys_zone=updates_layer:1m inactive=10m max_size=50m use_temp_path=off;
 
 server {
     listen 80;
@@ -52,7 +53,7 @@ server {
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
     location ~* "\/tiles\/\d{1}\/\d+\/\d+\.pbf" {
-        proxy_cache my_zone;
+        proxy_cache low_zoom_mvt;
         proxy_buffering on;
         add_header X-Proxy-Cache $upstream_cache_status;
         include proxy_params;
@@ -95,6 +96,9 @@ server {
         proxy_pass https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMS/StandardResolution;
     }
     location /updates.geojson {
+        proxy_cache updates_layer;
+        proxy_buffering on;
+        add_header X-Proxy-Cache $upstream_cache_status;
         add_header 'Access-Control-Allow-Origin' '*';
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
