fixed nginx caching configuration

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
-proxy_cache_path /tmp/nginx levels=1:2 keys_zone=low_zoom_mvt:10m inactive=10m max_size=100m use_temp_path=off;
-proxy_cache_path /tmp/nginx keys_zone=updates_layer:1m inactive=10m max_size=50m use_temp_path=off;
+proxy_cache_path /tmp/nginx/cache_low_zoom_mvt/ levels=1:2 keys_zone=low_zoom_mvt:10m inactive=10m max_size=100m use_temp_path=off;
+proxy_cache_path /tmp/nginx/cache_updates_layer/ keys_zone=updates_layer:1m inactive=10m max_size=50m use_temp_path=off;
 
 server {
     listen 80;
