--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,6 @@
 proxy_cache_path /tmp/nginx/cache_low_zoom_mvt/ levels=1:2 keys_zone=low_zoom_mvt:10m inactive=10m max_size=100m use_temp_path=off;
-proxy_cache_path /tmp/nginx/cache_updates_layer/ keys_zone=updates_layer:1m inactive=10m max_size=50m use_temp_path=off;
+proxy_cache_path /tmp/nginx/cache_high_zoom_mvt/ levels=1:2 keys_zone=high_zoom_mvt:20m inactive=5m max_size=200m use_temp_path=off;
+proxy_cache_path /tmp/nginx/cache_updates_layer/ keys_zone=updates_layer:1m inactive=5m max_size=10m use_temp_path=off;
 
 server {
     listen 80;
@@ -60,6 +61,9 @@ server {
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
     location ~* "\/tiles\/\d{2}\/\d+\/\d+\.pbf" {
+        proxy_cache high_zoom_mvt;
+        proxy_buffering on;
+        add_header X-Proxy-Cache $upstream_cache_status;
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
