--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=false
 logfile=/opt/gugik2osm/log/supervisord.log
 
 [program:gunicorn]
-environment=dsn="host=localhost port=5432 user=user password=password dbname=db",reCaptchaSecretToken=""
+environment=dsn="host=localhost port=5432 user=user password=password dbname=db"
 command=/opt/gugik2osm/venv/bin/python3 -m gunicorn.app.wsgiapp --config /opt/gugik2osm/conf/gunicorn_config.py --chdir /opt/gugik2osm/app --log-file /opt/gugik2osm/log/gunicorn.log --timeout 120 --reload  app:app
 stdout_logfile=/opt/gugik2osm/log/gunicorn_std.log
 ; stdout_logfile_maxbytes=2000000
