--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
-aniso8601==8.0.0
-appdirs==1.4.3
-attrs==19.3.0
-cached-property==1.5.1
-certifi==2019.11.28
-cffi==1.14.1
-chardet==3.0.4
-Click==7.0
-defusedxml==0.6.0
-Flask==1.1.2
-Flask-RESTful==0.3.8
-gevent==20.6.2
-greenlet==0.4.16
-gunicorn==20.0.4
-idna==2.6
+aniso8601==9.0.1
+appdirs==1.4.4
+attrs==21.2.0
+cached-property==1.5.2
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
+defusedxml==0.7.1
+Flask==2.0.1
+Flask-RESTful==0.3.9
+gevent==21.1.2
+greenlet==1.1.0
+gunicorn==20.1.0
+idna==2.10
 isodate==0.6.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
-lxml==4.6.2
-MarkupSafe==1.1.1
-osm2geojson==0.1.28
-psycopg2-binary==2.8.5
+itsdangerous==2.0.1
+Jinja2==3.0.1
+lxml==4.6.3
+MarkupSafe==2.0.1
+osm2geojson==0.1.29
+psycopg2-binary==2.9.1
 pycparser==2.20
-pyproj==2.6.1.post1
-pytz==2019.3
-requests==2.24.0
+pytz==2021.1
+requests==2.25.1
 requests-toolbelt==0.9.1
 Shapely==1.7.1
-six==1.13.0
-urllib3==1.24.2
-Werkzeug==0.16.0
+six==1.16.0
+urllib3==1.26.6
+Werkzeug==2.0.1
 zeep==3.4.0
-zope.event==4.4
-zope.interface==5.1.0
+zope.event==4.5.0
+zope.interface==5.4.0
