changed syntax of .env file and bash scripts in preparation of introducing python-dotenv library

--- a/conf/.env_example
+++ b/conf/.env_example
@@ -1,9 +1,8 @@
-export PGDATABASE=""
-export PGHOSTADDR="127.0.0.1"
-export PGPORT="5432"
-export PGUSER=""
-export PGPASSWORD=""
-
-export TERYTUSER=""
-export TERYTPASSWORD=""
-
+PGDATABASE=""
+PGHOSTADDR="127.0.0.1"
+PGPORT="5432"
+PGUSER=""
+PGUSER_RO=""
+PGPASSWORD=""
+TERYTUSER=""
+TERYTPASSWORD=""
