--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,3 +36,6 @@ jobs:
     - name: Test with pytest
       run: |
         python3 -m pytest
+    - name: Test street names mappings with great_expectations
+      run: |
+        great_expectations --v3-api checkpoint run street_names_mappings_checkpoint
