--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: gugik2osm
+name: tests-python
 
 on:
   push:
@@ -10,7 +10,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test:
+    name: Tests on python code and csv files
 
     runs-on: ubuntu-latest
 
