added endpoint to manually request refresh of the tile and more debug info in the browser after clicking on a feature

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -55,6 +55,10 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
+    location ~* "\/tiles\/\d+\/\d+\/\d+\/reload" {
+        include proxy_params;
+        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+    }
     location ~* "\/tiles\/\d{1}\/\d+\/\d+\.pbf" {
         add_header 'Access-Control-Allow-Origin' '*';
 
