--- a/.github/workflows/postgresql-tests.yml
+++ b/.github/workflows/postgresql-tests.yml
@@ -41,8 +41,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install PSQL client
         run: |
-            apt update
-            apt install --yes --no-install-recommends postgresql-client
+            sudo apt-get update
+            sudo apt-get install --yes --no-install-recommends postgresql-client
       - name: Run SQL scripts
         env:
           PGDATABASE: gis
