added manual caching of certain results

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -124,6 +124,19 @@ server {
         proxy_buffering on;
         add_header X-Proxy-Cache $upstream_cache_status;
         include proxy_params;
+        try_files /var/www/cache/updates.geojson @http_app;
+    }
+    location @http_app {
+        include proxy_params;
+        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+    }
+    location /updates/ {
+        add_header 'Access-Control-Allow-Origin' '*';
+
+        proxy_cache updates_layer;
+        proxy_buffering on;
+        add_header X-Proxy-Cache $upstream_cache_status;
+        include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
 }
