--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -124,7 +124,8 @@ server {
         proxy_buffering on;
         add_header X-Proxy-Cache $upstream_cache_status;
         include proxy_params;
-        try_files /var/www/cache/updates.geojson @http_app;
+        root /var/www/cache;
+        try_files $uri @http_app;
     }
     location @http_app {
         include proxy_params;
