--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -140,4 +140,11 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
+    location /processes.json {
+        add_header 'Access-Control-Allow-Origin' '*';
+
+        include proxy_params;
+        root /var/www/cache;
+        try_files $uri @http_app;
+    }
 }
