added endpoint for josm plugin

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -47,6 +47,12 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
+        location ~* "\/josm_plugins\/.+" {
+        add_header 'Access-Control-Allow-Origin' '*';
+
+        include proxy_params;
+        proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
+    }
     location /lod1/not_in/osm/info.json {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
