--- a/.github/workflows/postgresql-tests.yml
+++ b/.github/workflows/postgresql-tests.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+    types: [opened, reopened]
 
 jobs:
   # Label of the container job
