added initial stuff for airflow

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -153,4 +153,12 @@ server {
         root /var/www/cache;
         try_files $uri @http_app;
     }
+    location /airflow/ {
+        proxy_pass http://localhost:8081/airflow/;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
 }
