--- a/imposm3/mapping.yaml
+++ b/imposm3/mapping.yaml
@@ -116,7 +116,7 @@ tables:
       "disused:building": [__any__]
       "removed:building": [__any__]
       "destroyed:building": [__any__]
-      "man_made": ["foundations"]
+      man_made: [foundations]
   admin:
     columns:
     - name: osm_id
@@ -132,44 +132,22 @@ tables:
       boundary:
       - administrative
     type: polygon
-  waterareas:
-    type: polygon
+  admin_members:
+    type: relation_member
     columns:
     - name: osm_id
       type: id
-    - name: geometry
-      type: geometry
-    - name: tags
-      type: hstore_tags
+    - name: member
+      type: member_id
+    - name: index
+      type: member_index
+    - name: role
+      type: member_role
+    - name: type
+      type: member_type
+    relation_types: [boundary]
     mapping:
-      natural:
-      - water
-      waterway:
-      - riverbank
-      - dock
-      landuse:
-      - basin
-      - reservoir
-      - pond
-      leisure:
-      - swimming_pool
-  waterways:
-    type: linestring
-    columns:
-    - name: osm_id
-      type: id
-    - name: geometry
-      type: geometry
-    - name: tags
-      type: hstore_tags
-    mapping:
-      waterway:
-      - stream
-      - river
-      - canal
-      - drain
-      - ditch
-      - fish_pass
+      boundary: [administrative]
   roads:
     type: linestring
     columns:
@@ -244,39 +222,3 @@ tables:
       leisure: [__any__]
       office: [__any__]
       sport: [__any__]
-  woods:
-    type: polygon
-    columns:
-    - name: osm_id
-      type: id
-    - name: geometry
-      type: geometry
-    - name: tags
-      type: hstore_tags
-    mapping:
-      natural:
-      - wood
-  tree_rows:
-    type: linestring
-    columns:
-    - name: osm_id
-      type: id
-    - name: geometry
-      type: geometry
-    - name: tags
-      type: hstore_tags
-    mapping:
-      natural:
-      - tree_row
-  trees:
-    type: point
-    columns:
-    - name: osm_id
-      type: id
-    - name: geometry
-      type: geometry
-    - name: tags
-      type: hstore_tags
-    mapping:
-      natural:
-      - tree
