changed trigger to on push instead of on release

--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -5,8 +5,14 @@
 name: deploy-to-prod
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - 'processing/sql/data/street_names_mappings.csv'
+      - 'processing/miscellaneous/'
+      - '*.md'
+
 
 jobs:
   deploy:
