--- a/conf/.env_example
+++ b/conf/.env_example
@@ -1,9 +1,9 @@
-PGDATABASE=""
+PGDATABASE="gugik2osm"
 PGHOSTADDR="127.0.0.1"
 PGPORT="5432"
-PGUSER=""
-PGUSER_RO=""
-PGPASSWORD=""
-PGPASSWORD_RO=""
+PGUSER="postgres"
+PGUSER_RO="postgres"
+PGPASSWORD="postgres"
+PGPASSWORD_RO="postgres"
 TERYTUSER=""
 TERYTPASSWORD=""
