--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,12 +4,7 @@ proxy_cache_path /tmp/nginx/cache_updates_layer/ keys_zone=updates_layer:1m inac
 
 server {
     listen 80;
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1000;
-    gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml text/csv text/x-csv application/json application/geo+json;
-    gzip_disable "MSIE [1-6]\.";
+    server_name budynki.openstreetmap.org.pl;
     location / {
         root /var/www/html;
         add_header 'Access-Control-Allow-Origin' '*';
@@ -22,7 +17,7 @@ server {
         proxy_max_temp_file_size 0;
         autoindex on;
         autoindex_exact_size off;
-	    autoindex_localtime on;
+        autoindex_localtime on;
         alias /var/www/data/;
     }
     location /overpass-layers/ {
@@ -47,7 +42,7 @@ server {
         include proxy_params;
         proxy_pass http://unix:/run/gugik2osm/osmhelper.sock;
     }
-        location ~* "\/josm_plugins\/.+" {
+    location ~* "\/josm_plugins\/.+" {
         add_header 'Access-Control-Allow-Origin' '*';
 
         include proxy_params;
@@ -114,10 +109,11 @@ server {
     location /orto {
         add_header 'Access-Control-Allow-Origin' '*';
 
-        proxy_pass_header  Set-Cookie;
-        proxy_set_header X-Forwarded-Proto  $scheme;
-        proxy_set_header X-real-ip $remote_addr;
-        proxy_set_header X-forward-for $proxy_add_x_forwarded_for;
+        proxy_pass_header Set-Cookie;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
         proxy_redirect off;
 
@@ -153,9 +149,14 @@ server {
         root /var/www/cache;
         try_files $uri @http_app;
     }
-    location /airflow/ {
-        proxy_pass http://localhost:8081/airflow/;
-        proxy_set_header Host $host;
+}
+
+server {
+    listen 80;
+    server_name budynki-airflow.openstreetmap.org.pl;
+    location / {
+        proxy_pass http://127.0.0.1:8081;
+        proxy_set_header Host $http_host;
         proxy_redirect off;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
