--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aniso8601==9.0.1
 appdirs==1.4.4
-attrs==23.1.0
+attrs
 cached-property==1.5.2
 certifi==2021.5.30
 cffi==1.14.5
@@ -10,12 +10,12 @@ colorama==0.4.4
 defusedxml==0.7.1
 Flask==2.0.1
 Flask-RESTful==0.3.9
-gevent==21.1.2
+gevent
 greenlet==1.1.0
 gunicorn==20.1.0
 idna==2.10
 isodate==0.6.0
-itsdangerous==2.0.1
+itsdangerous
 Jinja2==3.0.1
 lxml==4.6.3
 MarkupSafe==2.0.1
