--- a/requirements_airflow.txt
+++ b/requirements_airflow.txt
@@ -75,7 +75,7 @@ iso8601==1.0.2
 isodate==0.6.1
 itsdangerous==1.1.0
 Jinja2==3.0.3
-jsonschema==4.5.1
+jsonschema
 kombu==5.2.3
 lazy-object-proxy==1.7.1
 lockfile==0.12.2
@@ -93,7 +93,7 @@ packaging==21.3
 paramiko==2.11.0
 pathspec==0.9.0
 pendulum==2.1.2
-pkg_resources==0.0.0
+#pkg_resources==0.0.0
 platformdirs==2.5.0
 pluggy==1.0.0
 prison==0.2.1
@@ -106,7 +106,7 @@ Pygments==2.12.0
 PyJWT==1.7.1
 PyNaCl==1.5.0
 pyparsing==2.4.7
-pyrsistent==0.18.1
+pyrsistent
 pysftp==0.2.9
 python-daemon==2.3.0
 python-dateutil==2.8.2
@@ -115,7 +115,7 @@ python-slugify==6.1.2
 python3-openid==3.2.0
 pytz==2022.1
 pytzdata==2020.1
-PyYAML==5.4.1
+PyYAML
 requests==2.27.1
 requests-file==1.5.1
 requests-toolbelt==0.9.1
